# blender

./: .gitignore
blender-web/: ARCHITECTURE.md  Cargo.toml
blender-web/crates/blender-core/: Cargo.toml
blender-web/crates/blender-core/src/: camera.rs  depsgraph.rs  id.rs  import.rs  lib.rs  light.rs  material.rs  mesh.rs  modifier.rs  object.rs  scene.rs  transform.rs
blender-web/crates/blender-gpu/: Cargo.toml
blender-web/crates/blender-gpu/src/: camera.rs  lib.rs  pipeline.rs  shader.rs  uniforms.rs
blender-web/crates/blender-wasi/: Cargo.toml
blender-web/crates/blender-wasi/src/: blend_file.rs  fs.rs  lib.rs  project.rs
blender-web/crates/blender-wasm/: Cargo.toml
blender-web/crates/blender-wasm/src/: lib.rs
blender-web/docs/: 01-RESEARCH.md  02-PATTERN-MAPPING.md  03-ARCHITECTURE-DECISIONS.md  04-SPRINT-PLAN.md  05-MODULE-DESIGN.md  06-REALISTIC-ROADMAP.md
