[workspace]
resolver = "2"
members = [
    "crates/blender-core",
    "crates/blender-wasm",
    "crates/blender-wasi",
    "crates/blender-gpu",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/user/blender-web"

[workspace.dependencies]
blender-core = { path = "crates/blender-core" }
blender-gpu = { path = "crates/blender-gpu" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.29", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = "2"
gltf = "1"

[profile.release]
opt-level = "s"
lto = true
