[package]
name = "blender-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data structures for Blender Web: scene graph, meshes, materials, transforms"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
