[package]
name = "blender-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data structures: scene graph, meshes, materials, transforms, ID system"

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
gltf = { workspace = true }
