[package]
name = "blender-wasi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASI module for local file access — .blend parsing, texture loading, project I/O"

[dependencies]
blender-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
