[package]
name = "blender-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen API surface for Blender Web — browser-facing bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blender-core = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
glam = { workspace = true }
log = { workspace = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "GpuDevice",
    "GpuQueue",
    "GpuBuffer",
    "GpuTexture",
] }
js-sys = "0.3"
wasm-logger = "0.2"

[profile.release]
opt-level = "s"
lto = true
