[package]
name = "blender-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bridge — thin wasm-bindgen API surface for browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blender-core = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
glam = { workspace = true }
log = { workspace = true }
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
